# AI_Chat

./: .gitignore  README.md  bquery_level2.ipynb  pyproject.toml
_bkp_settings/: Dockerfile
_bkp_settings/1604/: Dockerfile  settings.py
_hidden_for_now/profiles/: urls.py  views.py
_hidden_for_now/profiles/templates/: login.html
clarify_docs/: requirements.txt
clarify_docs/chats/: data_extractor.py  elasticsearch_crud.py  models.py  qa_model.py  urls.py  views.py
clarify_docs/chats/migrations/: 0001_initial.py  0002_alter_chat_user_delete_userprofile.py
clarify_docs/chats/static/CSS/: nicepage.css  style.css
clarify_docs/chats/templates/chats/: base.html  chat_interaction.html  index.html
clarify_docs/clarify_docs/: context_processors.py  settings.py  urls.py
clarify_docs/hug_chat/: apps.py  hug_model.py  models.py  urls.py  views.py
clarify_docs/hug_chat/migrations/: 0001_initial.py  0002_alter_hugchatmessage_user.py  0003_rename_question_hugchatmessage_message.py
clarify_docs/hug_chat/templates/hug_chat/: chat_hug.html
clarify_docs/llm_chat/: models.py  signals.py  urls.py  views.py
clarify_docs/llm_chat/migrations/: 0003_chatmessage_cost_chatmessage_tokens_and_more.py
clarify_docs/llm_chat/static/llm_chat/: scripts.js  styles.css
clarify_docs/llm_chat/templates/llm_chat/: 2111home.html  ___home.html  _base_old_base.html  base.html  chat.html  home - Copy (2).html  home - Copy.html  home.html  index.html  view_pdf.html
clarify_docs/users/: forms.py  models.py  urls.py  views.py
clarify_docs/users/templates/users/: logout.html  (+14 more)
(+1 files in other folders)
